# weatherspeak-ph

./: .gitignore  CLAUDE.md  HACKATHON_PLAN.md  README.md  devlog.md  main.py  pyproject.toml
docs/: constrained_decoding_analysis.md
modal_etl/: app.py  bulletin_selector.py  config.py  phonetics.py  run_batch.py  setup_volumes.py  step1_ocr.py  step2_scripts.py  step3_tts.py  step4_upload.py
modal_etl/core/: ocr.py  ocr_marker.py  ollama.py  scripts.py  tts.py
modal_etl/synthesizers/: base.py  mms.py  speecht5.py  xtts.py
notebooks/: 01-ocr-setup-and-data.ipynb  02-surya-ocr.ipynb  03-marker.ipynb  03-paddleocr.ipynb  04-gemma4-vision.ipynb  04-gemma4.ipynb  05-comparison.ipynb  06-radio-bulletin.ipynb  07-tts-experiment.ipynb  08-mms-tts-experiment.ipynb  10-etl-e2e.ipynb  README.md
notebooks/07-tts-experiment/: PAGASA_20-19W_Pepito_SWB#01_radio_ceb.md  PAGASA_20-19W_Pepito_SWB#01_radio_ceb_plain.txt
scripts/: synthesize_english_speecht5.py
supabase/migrations/: 001_initial_schema.sql  debug_mock_storm.sql  mock_active_storm.sql  mock_active_storm_simple.sql
tests/: test_bulletin_selector.py  test_core_ocr.py  test_core_ocr_marker.py  test_core_ollama.py  test_core_scripts.py  test_core_tts.py  test_mms_synthesis.py  test_phonetics.py  test_schema_validation.py  test_step2_format_metadata.py  test_step3_sentences.py  test_step4_upload.py  test_synthesizers_mms.py  test_synthesizers_speecht5.py  test_synthesizers_xtts.py  test_tts_preprocess.py
web/: next.config.mjs  package-lock.json  package.json
web/app/: globals.css  page.tsx  (+1 more)
writeup/: README.md
(+56 files in other folders)
