[project]
name = "weatherspeak-ph"
version = "0.1.0"
description = "AI-powered multilingual severe weather communications for the Philippines"
requires-python = ">=3.12"
dependencies = [
    "coqui-tts>=0.25.0",
    "pydub>=0.25.1",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "transformers>=4.43.0,<=4.46.2",  # pinned: coqui-tts 0.25.x compatibility constraint
    "marker-pdf>=1.6.0,<1.7.0",  # pinned: 1.7+ pulls surya-ocr>=0.17 which needs transformers>=4.56
    "modal>=0.73.0",
    "pdf2image>=1.17.0",
    "requests>=2.32.0",
]

[dependency-groups]
dev = [
    "jsonschema>=4.26.0",
    "pytest>=9.0.3",
]
